--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="slideshow-container">
 
     <div class="mySlides">
-      <img src="/picture/team2.jpg" style="width:100%">
+      <img src="/picture/team2.jpg" alt="Team" style="width:100%">
       <div class="slide-text">
         <h3>Welcome</h3>
       </div>
